--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typer</title>
+    <title>Multi stream</title>
   </head>
   <body>
     <div id="app" />
     <script src="public/chunk.vendor.min.js" type="text/javascript"></script>
-    <script src="public/chunk.min.js" type="text/javascript"></script>
+    <script src="public/client.min.js" type="text/javascript"></script>
   </body>
 </html
