--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,4 @@
     <script src="public/chunk.vendor.min.js" type="text/javascript"></script>
     <script src="public/client.min.js" type="text/javascript"></script>
   </body>
-</html
+</html>
