--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app" />
-    <script src="public/chunk.vendor.min.js" type="text/javascript"></script>
-    <script src="public/client.min.js" type="text/javascript"></script>
+    <script src="/chunk.vendor.min.js" type="text/javascript"></script>
+    <script src="/client.min.js" type="text/javascript"></script>
   </body>
 </html>
