Adding empty display component

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
     </head>
     <body>
         <div id="app" />
-        <script
-            src="public/chunk.vendor.min.js"
-            type="text/javascript"
-        ></script>
-        <script src="public/client.min.js" type="text/javascript"></script>
+        <script src="/js/chunk.vendor.min.js" type="text/javascript"></script>
+        <script src="/js/client.min.js" type="text/javascript"></script>
     </body>
 </html>
